--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px 16px 8px;
+  gap: 8px;
+  align-items: center;
 }
 
 .profile-image {
@@ -45,4 +49,14 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+  margin-right: auto;
+  padding: 2px;
+}
+
+.account-info {
+  display: flex;
+  justify-self: flex-end;
+  gap: 8px;
 }
